[tool.poetry]
name = "ginconfig-base"
version = "0.1.0"
description = ""
authors = ["Maria Bader <maria.bader@mollie.com>"]
readme = "README.md"
packages = [{include = "ginconfig_base"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
